--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <main>
       <section class="left">
         <input type="number" class="guess" />
-        <button class="btn check">Check!</button>
+        <button class="btn check">Check ! </button>
       </section>
       <section class="right">
-        <p class="message">Start guessing.....</p>
+        <p class="message">Start guessing...</p>
         <p class="label-score">💯 Score: <span class="score">30</span></p>
         <p class="label-highscore">
-          🥇 Highscore: <span class="highscore">0</span>
+          🥇 Highscore : <span class="highscore">0</span>
         </p>
       </section>
     </main>
